Fix video on Safari

--- a/web/src/sass/components/_carousel.scss
+++ b/web/src/sass/components/_carousel.scss
@@ -38,6 +38,15 @@
 			width: 250px;
 		}
 
+		&--video {
+			width: auto;
+			height: 405px;
+
+			@include mobile-599 {
+				height: 200px;
+			}
+		}
+
 		img {
 			width: 100%;
 			height: 405px;
@@ -60,7 +69,7 @@
 
 			video {
 				cursor: pointer;
-				width: 100%;
+				width: auto;
 				height: 100%;
 				max-height: 505px;
 				object-fit: cover;
